--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 			}
 
 .cover{
-	background: url("p123.JPG");
+	background: url("p12345.JPG");
 	height:100vh;
 	weight:100%;
 	background-size:100% 100%;
@@ -48,30 +48,31 @@
                  font-size:20px;
                  font-weight:bold;
                  box-sizing:border-box;
-                 padding-left:100px;
+                 padding-left:50px;
 		 display:inline-block;
 					}
 
 .right-bar ul li:hover{color:white;cursor:pointer;}
 
-.right-bar ul li:nth-child(1){color:yellow;}
 
+
+/*h3 menu header*/
 .hero-text h3{
 	      box-sizing:border-box;
 	      text-transform:uppercase;
 	      font-size:20px;
-	      text-align:center;
-	      padding-top:180px;
+	      text-align:left;
+	      padding-top:20px;
 	      color:yellow;
 	   			}
 
 .hero-text h2{
 	       text-transform:uppercase;
-	       font-size:50px;
+	       font-size:20px;
 	       text-align:center;
 	       color:yellow;
 				}
-
+/*h4 es el content del menu*/
 .hero-text h4{
 	      text-transform:uppercase;
 	      text-align:center;
@@ -80,13 +81,14 @@
 					}
 
 #btn-1{
+	position: fixed;
+	bottom: 0;
+    right: 10;
 	text-align:center;
 	height:50px;
 	width:100px;
 	text-transform:uppercase;
 	font-size:20px;
-	margin-left:550px;
-	margin-top:20px;
 	color:yellow;
 	background:linear-gradient(45deg,black,transparent);
 	border:1px solid black;
@@ -95,15 +97,16 @@
 						}
 
 #btn-1:hover{color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;}
-
+/*fixed button*/
 #btn-2{
+	position: fixed;
+	bottom: 0;
+    right: 0;
 	text-align:center;
 	height:50px;
 	width:100px;
 	text-transform:uppercase;
 	font-size:20px;
-	margin-left:50px;
-	margin-top:-50px;
 	color:yellow;
 	background:linear-gradient(45deg,black,transparent);
 	border:1px solid black;
