--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 			}
 
 .cover{
-	background: url("p12345.JPG");
+	background: url("img/p12345.JPG");
 	height:100vh;
 	weight:100%;
 	background-size:100% 100%;
