--- a/public/style.css
+++ b/public/style.css
@@ -2,83 +2,66 @@
    margin:0;
    padding:0;
    list-style:none;
-			}
+   
+}
 
 .cover{
 	background: url("img/p12345.JPG");
 	height:100vh;
 	weight:100%;
 	background-size:100% 100%;
-					}
+}
 
 .nav-bar{
-	  height:90px;
+	  height: 100px;
 	  width:100%;
-	  background-color:rgba(0,0,0,.7);
-          display:inline-block;
-
-					}
+	  background-color:rgba(0, 0, 0, 0.822);
+}  
 
 .left-bar{
-	  height:90px;
-	  width:25%;
-	  background-color:none;
-	  display:inline-block;
-          	 			}
-
+    float: left;
+	padding: 20px;
+}
 .left-bar h1{
 	     text-transform:uppercase;
 	     font-weight:bold;
-	     color:green;
-	     display:inline-block;
-	     padding-left:20px;
-	     line-height:20px;
-	     }
+	     color: yellow;     
+		 font-size: 52px; 
+		 font-family: "Comic Sans MS", "Comic Sans", cursive;
+		 -webkit-text-stroke: 1px rgba(255, 0, 0, 0.384);
+}
+
 .right-bar{
-	   height:90px;
-	   width:70%;
-	   background-color:none;
-           line-height:100px;
-           display:inline-block;
-	  			 }
+    float: right;
+    padding: 20px;
 
-.right-bar ul li{
-		 color:green;
-		 display:inline-block;
-                 font-size:20px;
-                 font-weight:bold;
-                 box-sizing:border-box;
-                 padding-left:50px;
-		 display:inline-block;
-					}
+}
+.logo{
+	background-size: 150px Auto;
+}
+.logo > img{
+	width:5%;
+    height:5%;
+}
+.logo a{
+	width: 50%;
+    float: right;
+    padding: 20px;
+	text-align:right;
+	font-size: 30px;
+}
 
-.right-bar ul li:hover{color:white;cursor:pointer;}
 
-
-
-/*h3 menu header*/
-.hero-text h3{
+/*h3 menu header
+.hero-text h2{
 	      box-sizing:border-box;
 	      text-transform:uppercase;
-	      font-size:20px;
+	      font-size:40px;
 	      text-align:left;
 	      padding-top:20px;
 	      color:yellow;
-	   			}
-
-.hero-text h2{
-	       text-transform:uppercase;
-	       font-size:20px;
-	       text-align:center;
-	       color:yellow;
-				}
-/*h4 es el content del menu*/
-.hero-text h4{
-	      text-transform:uppercase;
-	      text-align:center;
-	      font-size:20px;
-	      color:yellow;
-					}
+}
+*/
 
 #btn-1{
 	position: fixed;
@@ -94,6 +77,7 @@
 	border:1px solid black;
 	border-square:50px;
 	box-shadow:0px 0px 5px 10px green ;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
 						}
 
 #btn-1:hover{color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;}
@@ -112,8 +96,86 @@
 	border:1px solid black;
 	border-square:50px;
 	box-shadow:0px 0px 5px 10px green;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
 				               }
 
-#btn-2:hover{color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;}
+#btn-2:hover{
+	color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;
+}
+
+#btn-3{
+	position: fixed;
+	bottom: 25px;
+    left: 750px;
+	text-align:center;
+	height:50px;
+	width:100px;
+	text-transform:uppercase;
+	font-size:20px;
+	color:yellow;
+	background:linear-gradient(45deg,black,transparent);
+	border:1px solid black;
+	border-square:50px;
+	box-shadow:0px 0px 5px 10px green;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+#btn-3:hover{
+	color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;
+}
 
 
+.cont{
+	padding: 20px;
+	/*border: solid red;*/
+}
+.itemBoxGrid {
+display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  padding: 20px;
+  grid-auto-flow: column;
+  }
+  .itemBoxGrid > div {
+	width:100%;
+	height:100%;	
+	
+}
+.itemBoxGrid > div img{
+	width:100%;
+    height:80%;
+}  
+
+  .itemBox {
+	text-align: center;
+
+   
+  }
+  .itemBox label{
+	 box-sizing:border-box;
+	      text-transform:uppercase;
+	      font-size:30px;
+	      text-align:left;
+	      padding-top:20px;
+	      color:yellow;
+		  font-family: "Comic Sans MS", "Comic Sans", cursive;
+		  -webkit-text-stroke: 1px rgba(255, 0, 0, 0.384);
+  }
+
+  .checkbox-round {
+    width: 1.3em;
+    height: 1.3em;
+    background-color: white;
+    border-radius: 50%;
+    vertical-align: left;
+    border: 1px solid #ddd;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+	padding: 10px;
+}
+
+.checkbox-round:checked {
+    background-color: green;
+}
