--- a/public/style.css
+++ b/public/style.css
@@ -5,17 +5,11 @@
    
 }
 
-.cover{
-	background: url("img/p12345.JPG");
-	height:100vh;
-	weight:100%;
-	background-size:100% 100%;
-}
 
 .nav-bar{
 	  height: 100px;
 	  width:100%;
-	  background-color:rgba(0, 0, 0, 0.822);
+	  background-color:rgba(0, 0, 0, 0.966);
 }  
 
 .left-bar{
@@ -178,4 +172,9 @@ display: grid;
 
 .checkbox-round:checked {
     background-color: green;
+}
+
+h1{
+	color:yellow;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
