--- a/public/style.css
+++ b/public/style.css
@@ -178,3 +178,16 @@ h1{
 	color:yellow;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
+.loginDiv{
+    
+	padding: 20px;
+}
+.login-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.login-wrapper > label{
+    color:yellow;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
