--- a/public/style.css
+++ b/public/style.css
@@ -38,11 +38,10 @@
     height:5%;
 }
 .logo a{
-	width: 50%;
     float: right;
     padding: 20px;
-	text-align:right;
 	font-size: 30px;
+	color: yellow;
 }
 
 
@@ -59,58 +58,57 @@
 
 #btn-1{
 	position: fixed;
+	padding: 50px;
 	bottom: 0;
-    right: 10;
-	text-align:center;
-	height:50px;
-	width:100px;
-	text-transform:uppercase;
-	font-size:20px;
-	color:yellow;
-	background:linear-gradient(45deg,black,transparent);
-	border:1px solid black;
-	border-square:50px;
-	box-shadow:0px 0px 5px 10px green ;
+	left: 0;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 20px;
+	color: yellow;
+	background: linear-gradient(45deg, black, transparent);
+	border: 1px solid black;
+	border-square: 50px;
+	box-shadow: 0px 0px 5px 10px green;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 						}
 
 #btn-1:hover{color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;}
-/*fixed button*/
+/*fixed button
 #btn-2{
 	position: fixed;
+	padding: 50px;
 	bottom: 0;
-    right: 0;
-	text-align:center;
-	height:50px;
-	width:100px;
-	text-transform:uppercase;
-	font-size:20px;
-	color:yellow;
-	background:linear-gradient(45deg,black,transparent);
-	border:1px solid black;
-	border-square:50px;
-	box-shadow:0px 0px 5px 10px green;
+    left: 43%;
+	
+	
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 20px;
+	color: yellow;
+	background: linear-gradient(45deg, black, transparent);
+	border: 1px solid black;
+	border-square: 50px;
+	box-shadow: 0px 0px 5px 10px green;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 				               }
 
 #btn-2:hover{
 	color:green;cursor:pointer;border-radius:50px;box-shadow:0px 0px 5px 10px yellow;
-}
+}*/
 
 #btn-3{
 	position: fixed;
-	bottom: 25px;
-    left: 750px;
-	text-align:center;
-	height:50px;
-	width:100px;
-	text-transform:uppercase;
-	font-size:20px;
-	color:yellow;
-	background:linear-gradient(45deg,black,transparent);
-	border:1px solid black;
-	border-square:50px;
-	box-shadow:0px 0px 5px 10px green;
+	padding: 50px;
+	bottom: 0;
+	right: 0;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 20px;
+	color: yellow;
+	background: linear-gradient(45deg, black, transparent);
+	border: 1px solid black;
+	border-square: 50px;
+	box-shadow: 0px 0px 5px 10px green;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
@@ -121,8 +119,19 @@
 
 .cont{
 	padding: 20px;
-	/*border: solid red;*/
 }
+.cont > h1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.cover > h1{
+	display: flex;
+	flex-direction: column;
+	justify-content: right;
+	text-align: right;
+  }
 .itemBoxGrid {
 display: grid;
   grid-template-columns: auto auto auto auto;
@@ -132,8 +141,8 @@ display: grid;
   }
   .itemBoxGrid > div {
 	width:100%;
-	height:100%;	
-	
+	height:100%;
+
 }
 .itemBoxGrid > div img{
 	width:100%;
@@ -179,8 +188,7 @@ h1{
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 .loginDiv{
-    
-	padding: 20px;
+	padding: 100px;
 }
 .login-wrapper {
     display: flex;
@@ -190,4 +198,5 @@ h1{
 .login-wrapper > label{
     color:yellow;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
+	
 }
