--- a/public/style.css
+++ b/public/style.css
@@ -10,11 +10,13 @@
 	  height: 100px;
 	  width:100%;
 	  background-color:rgba(0, 0, 0, 0.966);
+
 }  
 
 .left-bar{
     float: left;
 	padding: 20px;
+
 }
 .left-bar h1{
 	     text-transform:uppercase;
@@ -25,24 +27,34 @@
 		 -webkit-text-stroke: 1px rgba(255, 0, 0, 0.384);
 }
 
-.right-bar{
-    float: right;
-    padding: 20px;
 
-}
 .logo{
 	background-size: 150px Auto;
+
+
 }
 .logo > img{
+	float: left;
 	width:5%;
     height:5%;
 }
-.logo a{
-    float: right;
+.right{
+
+}
+.right > a{
+	float:right;
     padding: 20px;
 	font-size: 30px;
 	color: yellow;
 }
+.right > a > img{
+	float:right;
+	width:8%;
+  
+	
+}
+
+
 
 
 /*h3 menu header
@@ -188,10 +200,11 @@ display: grid;
     background-color: green;
 }
 
-h1{
+h1 ,h2, h3, h4, h5{
 	color:yellow;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
+
 .loginDiv{
 	padding: 100px;
 }
@@ -200,8 +213,63 @@ h1{
     flex-direction: column;
     align-items: center;
 }
-.login-wrapper > label{
-    color:yellow;
+
+label{
+	color:yellow;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
-	
+}
+
+* {box-sizing: border-box}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Overwrite default styles of hr */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* Set a style for the submit/register button */
+.registerbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.registerbtn:hover {
+  opacity:1;
+}
+
+/* Add a blue text color to links */
+a {
+  color: dodgerblue;
+}
+
+/* Set a grey background color and center the text of the "sign in" section */
+.signin {
+  background-color: #f1f1f1;
+  text-align: center;
 }
